Fixed GitHub Issue #2 (Clue direction does not reflect selection direction) and fixed button appearance on iOS/iPadOS devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,6 +41,7 @@ header h1 {
 }
 
 button {
+    appearance: none;
     border: 1px solid var(--text-color);
     background-color: var(--bg-color);
     cursor: pointer;
